compilador.java
/* compilador.java */
/* Generated By:JavaCC: Do not edit this line. compilador.java */
import java.io.*;
class compilador implements compiladorConstants {
        public static void main( String[] args )throws ParseException, Exception
        {
                try
                {
                compilador analizador = new compilador( System.in ) ;
                        analizador.Programa();
                        System.out.println("Fim");
                }
                catch(ParseException e)
                {
                        System.out.println(e.getMessage());
                        System.out.println("Erro: ");
                }
        }

  static final public void Programa() throws ParseException {
    jj_consume_token(PROGRAMA);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(PONTO_VIRGULA);
    Bloco();
    jj_consume_token(0);
  }

  static final public void Bloco() throws ParseException {
    Declaracoes();
    Principal();
  }

  static final public void Declaracoes() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VAR:
      case PONTO_VIRGULA:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case VAR:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        DeclaraUmaVariavel();
      }
      jj_consume_token(PONTO_VIRGULA);
    }
  }

  static final public void DeclaraUmaVariavel() throws ParseException {int td;
        Token var;
    jj_consume_token(VAR);
    var = jj_consume_token(IDENTIFICADOR);
    jj_consume_token(DOIS_PONTO);
    TiposDDados();
td = token.kind;
                TokenSymTab.InserirSimbolo(var, td);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ATRIBUICAO:{
      VariaveisAtribuicao(var);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }
  }

  static final public void Tipo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEIRO:{
      jj_consume_token(INTEIRO);
      break;
      }
    case BOOLEANO:{
      jj_consume_token(BOOLEANO);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Principal() throws ParseException {TokenSymTab.SetTables();
    jj_consume_token(INICIO);
    Sentencas();
    jj_consume_token(FIM);
    jj_consume_token(PONTO);
  }

  static final public void VariaveisLocais() throws ParseException {int td;
        Token var;
    TiposDDados();
td = token.kind;
    var = jj_consume_token(IDENTIFICADOR);
TokenSymTab.InserirSimbolo(var, td);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ATRIBUICAO:{
      VariaveisAtribuicao(var);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VIRGULA:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      jj_consume_token(VIRGULA);
      var = jj_consume_token(IDENTIFICADOR);
TokenSymTab.InserirSimbolo(var, td);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ATRIBUICAO:{
        VariaveisAtribuicao(var);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        ;
      }
    }
    jj_consume_token(PONTO_VIRGULA);
    VS();
  }

  static final public void VariaveisAtribuicao(Token v1) throws ParseException {Token v2;
        Token v3;
        String res;
        boolean imp = false;
    jj_consume_token(ATRIBUICAO);
    TiposAtribuicao();
v2 = token;
                res = TokenSymTab.checkAtrib(v1, v2, "c");

                if(res != " ")
                {
                        System.out.println(res);
                        imp = true;
                }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAIS:
      case MENOS:
      case MULT:
      case DIV:
      case NUMERO:
      case VERDADEIRO:
      case FALSO:
      case IDENTIFICADOR:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      Operacao();
      TiposAtribuicao();
v3 = token;
                res = TokenSymTab.checkAtrib(v1, v3, "d");

                if(res != " " && !imp)
                {
                        System.out.println(res);
                }
    }
  }

  static final public void VS() throws ParseException {
    if (jj_2_1(3)) {
      VariaveisLocais();
    } else {
      Sentencas();
    }
  }

  static final public void Sentencas() throws ParseException {
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ESCREVA:
      case INTEIRO:
      case BOOLEANO:
      case IDENTIFICADOR:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEIRO:
      case BOOLEANO:{
        VariaveisLocais();
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        if (jj_2_2(2)) {
          Atribuicao();
          jj_consume_token(PONTO_VIRGULA);
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ESCREVA:{
            Escreva();
            break;
            }
          default:
            jj_la1[10] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
  }

  static final public int Operacao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MAIS:{
      jj_consume_token(MAIS);
{if ("" != null) return 1;}
      break;
      }
    case MENOS:{
      jj_consume_token(MENOS);
{if ("" != null) return 1;}
      break;
      }
    case MULT:{
      jj_consume_token(MULT);
{if ("" != null) return 1;}
      break;
      }
    case DIV:{
      jj_consume_token(DIV);
{if ("" != null) return 1;}
      break;
      }
    default:
      jj_la1[11] = jj_gen;
{if ("" != null) return 0;}
{if ("" != null) return 0;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public void TiposDDados() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEIRO:{
      jj_consume_token(INTEIRO);
      break;
      }
    case BOOLEANO:{
      jj_consume_token(BOOLEANO);
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Atribuicao() throws ParseException {Token v1;
        Token v2;
        Token v3;
        int aux;
        String res;
        boolean imp = false;
    v1 = jj_consume_token(IDENTIFICADOR);
    jj_consume_token(ATRIBUICAO);
    TiposAtribuicao();
v2 = token;
        res = TokenSymTab.checkAtrib(v1, v2, "a");

        if(res != " ")
        {
                imp = true;
                System.out.println("\u005cn" + res);
        }
    label_6:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_6;
      }
      Operacao();
      TiposAtribuicao();
v3 = token;
        res = TokenSymTab.checkAtrib(v1, v3, "b");

        if(res != " " && !imp)
        {
                System.out.println("Operacao\u005cn" + res);
        }
    }
  }

  static final public void TiposAtribuicao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VERDADEIRO:{
      jj_consume_token(VERDADEIRO);
      break;
      }
    case FALSO:{
      jj_consume_token(FALSO);
      break;
      }
    case NUMERO:{
      jj_consume_token(NUMERO);
      break;
      }
    case IDENTIFICADOR:{
      jj_consume_token(IDENTIFICADOR);
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Escreva() throws ParseException {Token v1 = new Token();
        String res;
    jj_consume_token(ESCREVA);
    jj_consume_token(ABREPARENTESES);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFICADOR:{
      v1 = jj_consume_token(IDENTIFICADOR);
      break;
      }
    case NUMERO:{
      jj_consume_token(NUMERO);
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
res = TokenSymTab.checkExist(v1);

                if(res != " ")
                {
                        System.out.println(res);
                }
    jj_consume_token(FECHAPARENTESES);
    jj_consume_token(PONTO_VIRGULA);
  }

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_3R_8()
 {
    if (jj_scan_token(IDENTIFICADOR)) return true;
    if (jj_scan_token(ATRIBUICAO)) return true;
    return false;
  }

  static private boolean jj_3_2()
 {
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3R_13()
 {
    if (jj_scan_token(VIRGULA)) return true;
    return false;
  }

  static private boolean jj_3R_11()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(16)) {
    jj_scanpos = xsp;
    if (jj_scan_token(17)) return true;
    }
    return false;
  }

  static private boolean jj_3_3()
 {
    if (jj_3R_9()) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3R_10()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(19)) {
    jj_scanpos = xsp;
    if (jj_scan_token(20)) {
    jj_scanpos = xsp;
    if (jj_scan_token(18)) {
    jj_scanpos = xsp;
    if (jj_scan_token(21)) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_7()
 {
    if (jj_3R_11()) return true;
    if (jj_scan_token(IDENTIFICADOR)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_12()) jj_scanpos = xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_13()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(PONTO_VIRGULA)) return true;
    return false;
  }

  static private boolean jj_3_1()
 {
    if (jj_3R_7()) return true;
    return false;
  }

  static private boolean jj_3R_18()
 {
    return false;
  }

  static private boolean jj_3R_17()
 {
    if (jj_scan_token(DIV)) return true;
    return false;
  }

  static private boolean jj_3R_16()
 {
    if (jj_scan_token(MULT)) return true;
    return false;
  }

  static private boolean jj_3R_12()
 {
    if (jj_3R_19()) return true;
    return false;
  }

  static private boolean jj_3R_15()
 {
    if (jj_scan_token(MENOS)) return true;
    return false;
  }

  static private boolean jj_3R_19()
 {
    if (jj_scan_token(ATRIBUICAO)) return true;
    return false;
  }

  static private boolean jj_3R_14()
 {
    if (jj_scan_token(MAIS)) return true;
    return false;
  }

  static private boolean jj_3R_9()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_14()) {
    jj_scanpos = xsp;
    if (jj_3R_15()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) return true;
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public compiladorTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[15];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x2400,0x400,0x2,0x30000,0x2,0x4000,0x2,0x3c003c,0x230200,0x30000,0x200,0x3c,0x30000,0x3c0000,0x240000,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[3];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public compilador(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public compilador(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new compiladorTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public compilador(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new compiladorTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public compilador(compiladorTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(compiladorTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 15; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  @SuppressWarnings("serial")
  static private final class LookaheadSuccess extends java.lang.Error { }
  static final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  static private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk_f() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;
  static private int[] jj_lasttokens = new int[100];
  static private int jj_endpos;

  static private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      jj_entries_loop: for (java.util.Iterator<?> it = jj_expentries.iterator(); it.hasNext();) {
        int[] oldentry = (int[])(it.next());
        if (oldentry.length == jj_expentry.length) {
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              continue jj_entries_loop;
            }
          }
          jj_expentries.add(jj_expentry);
          break jj_entries_loop;
        }
      }
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[28];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 15; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 28; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    jj_endpos = 0;
    jj_rescan_token();
    jj_add_error_token(0, 0);
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

  static private void jj_rescan_token() {
    jj_rescan = true;
    for (int i = 0; i < 3; i++) {
    try {
      JJCalls p = jj_2_rtns[i];
      do {
        if (p.gen > jj_gen) {
          jj_la = p.arg; jj_lastpos = jj_scanpos = p.first;
          switch (i) {
            case 0: jj_3_1(); break;
            case 1: jj_3_2(); break;
            case 2: jj_3_3(); break;
          }
        }
        p = p.next;
      } while (p != null);
      } catch(LookaheadSuccess ls) { }
    }
    jj_rescan = false;
  }

  static private void jj_save(int index, int xla) {
    JJCalls p = jj_2_rtns[index];
    while (p.gen > jj_gen) {
      if (p.next == null) { p = p.next = new JJCalls(); break; }
      p = p.next;
    }
    p.gen = jj_gen + xla - jj_la; p.first = token; p.arg = xla;
  }

  static final class JJCalls {
    int gen;
    Token first;
    int arg;
    JJCalls next;
  }

}
